--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: node_js
-node_js: 
+node_js:
   - "10.11.0"
 cache:
   directories:
     - "node_modules"
 addons:
   ssh_known_hosts:
-  - tga.ecti.ac.nz
+    - beta.tga.ecti.ac.nz
 after_success:
+  - npm run build
+  - cd build
   - git branch
   - git checkout master
   - eval "$(ssh-agent -s)" #start the ssh agent
-  - chmod 600 .travis/deploy # this key should have push access
-  - ssh-add .travis/deploy
-  - git remote add deploy administrator@tga.ecti.ac.nz:/home/administrator/trials3/repo
+  - chmod 600 ../.travis/deploy # this key should have push access
+  - ssh-add ../.travis/deploy
+  - git remote add deploy docker@tga.ecti.ac.nz:/home/docker/WEBCONTENT/beta/repo
   - git push deploy
