removed beta from known hosts

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - "node_modules"
 addons:
   ssh_known_hosts:
-    - beta.tga.ecti.ac.nz
+    - tga.ecti.ac.nz
 after_success:
   - npm run build
   - cd build
