--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ after_success:
   - eval "$(ssh-agent -s)" #start the ssh agent
   - chmod 600 ../.travis/deploy # this key should have push access
   - ssh-add ../.travis/deploy
-  - git remote add deploy docker@tga.ecti.ac.nz:/home/docker/WEBCONTENT/beta/repo
+  - git remote add deploy administrator@tga.ecti.ac.nz:/home/docker/WEBCONTENT/beta/repo
   - git push deploy
