Moved stuff into script

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,7 @@ addons:
     - tga.ecti.ac.nz
 before_script:
   - npm run build
+  - cp setup.sh build/setup.sh
   - cd build
-after_success:
-  - git init
-  - ls -la
-  - git branch
-  - git checkout master
-  - eval "$(ssh-agent -s)" #start the ssh agent
-  - chmod 600 ../.travis/deploy # this key should have push access
-  - ssh-add ../.travis/deploy
-  - git remote add deploy administrator@tga.ecti.ac.nz:/home/docker/WEBCONTENT/beta/repo
-  - git push deploy
+script:
+  - ./setup.sh
