--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.3.1",
+    "lightbox2": "^2.10.0",
+    "markdown-it": "^8.4.2",
+    "markdown-it-attrs": "^2.3.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.2",
