--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
     "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
     "markdown-it": "^8.4.2",
