--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
   ssh_known_hosts:
     - tga.ecti.ac.nz
 before_script:
-  - npm run build
+  - npm run build-js
   - cp setup.sh build/setup.sh
   - cd build
 script:
